@@ -3,6 +3,8 @@
 * Support building of Xcode 4 workspaces
 * Add build schedule names and allow execution of each configuration in the build page
 * Dynamically update workspaces where CocoaPods are used for Xcode projects
+* Support for setting tasks on an ant build
+* Build Android apps using ant to avoid eclipse issues
 
 * Don't send notifications to disabled accounts
 * Re-enable eclipse build handling
